# typst-ide

./: Cargo.toml  README.md
.github/workflows/: release.yml
crates/app/: Cargo.toml  tauri.conf.json
crates/app/capabilities/: default.json
crates/app/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/compiler/: compile.rs  mod.rs
crates/core/src/database/: history_db.rs  mod.rs  notes_db.rs
crates/core/src/features/: bibliography.rs  mod.rs  notepad.rs
crates/typst-as-library/src/: lib.rs
demo/: .gitignore  README.md  demo.sh  package-lock.json  package.json  wdio.conf.js
demo/tests/: helpers.js  walkthrough1.test.js  walkthrough2.test.js
frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.js
frontend/public/css/: output.css
frontend/scripts/: inject-tailwind.js
frontend/src/: index.html  input.css  style.css
frontend/src/css/: output.css
frontend/src/js/: bibliography.js  editor.js  history.js  main.js  modal.js  notepad.js  shortcuts.js  toast.js  webview-zoom.js
frontend/src/js/bibliography/: bibliography.js  sources.js
frontend/src/js/schema/: biblatex-entries.js
