[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
tauri = { version = "2.1", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
typst-ide-core = { path = "../core", package = "core" }
rfd = "0.17.2"
font-kit = "0.14"
tauri-plugin-opener = "2"
rusqlite = { version = "0.38.0", features = ["bundled"] }
tauri-plugin-clipboard-manager = "2"
base64 = "0.22"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
