[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
typst = "*"
typst-ide = "0.14.2"
typst-as-library = { path = "../typst-as-library" }
typst-pdf = "*"
typst-svg = "*"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
uuid = { version = "1.3.0", features = ["v4"] }
chrono = "0.4"
sha2 = "0.10.2"
regex = "*"

[dev-dependencies]
tempfile = "3.0.0"
pdf-extract = "0.10.0"
